--- a/style.css
+++ b/style.css
@@ -1,67 +1,77 @@
 * {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 body {
-  background-color: black;
+    background-color: black;
 }
 .title {
-  padding: 20px;
-  width: 450px;
-  margin: auto auto 10px auto;
-  height: 60px;
-  border-radius: 10px;
-  text-align: center;
-  font-weight: 700;
-  font-size: 40px;
-  color: azure;
-  background-color: #ac099e;
+    box-sizing: border-box;
+    padding: 20px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    font-weight: 700;
+    font-size: 40px;
+    color: azure;
+    background-color: #ac099e;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    width: 100%;
 }
 .game {
-  width: 500px;
-  margin: 60px auto;
-  font-family: Arial, Helvetica, sans-serif;
+    width: 500px;
+    margin: 60px auto;
+    font-family: Arial, Helvetica, sans-serif;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
 }
 span {
-  color: #f5d522;
+    color: #f5d522;
 }
 .square {
-  width: 155px;
-  height: 155px;
-  float: left;
-  margin: 5px;
-  color: white;
-  text-align: center;
-  font-size: 110px;
-  border-radius: 10px;
-  background-color: #aa34c2;
-  transition: 0.3s;
+    width: 100%;
+    height: 155px;
+    color: white;
+    font-size: 110px;
+    border-radius: 10px;
+    background-color: #aa34c2;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.square.disable {
+    cursor: not-allowed;
 }
 
 .square:hover {
-  transform: scaleX(1.03);
-  background-color: #ac099e;
-  border: wheat 1px sol;
+    transform: scaleX(1.03);
+    background-color: #ac099e;
+    border: wheat 1px sol;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media (max-width: 450px) {
-  .game {
-    margin: 100px auto auto auto;
-    width: 300px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  .square {
-    width: 90px;
-    height: 90px;
-    float: left;
-    margin: 5px;
-    font-size: 80px;
-  }
-  .title {
-    width: 255px;
-    margin: auto auto 10px;
-    font-weight: 600;
-    font-size: 45px;
-  }
+    .game {
+        margin: 100px auto auto auto;
+        width: 300px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    .square {
+        width: 100%;
+        height: 90px;
+        font-size: 80px;
+    }
+    .title {
+        width: 100%;
+        margin: auto auto 10px;
+        font-weight: 600;
+        font-size: 45px;
+    }
 }
